# omcp

./: .codebook.toml  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
examples/: omcp_std_server.rs  omcpcli.rs
lib/src/: error.rs  json_rpc.rs  lib.rs
lib/src/client/: builder.rs  io.rs  mod.rs  sse.rs  types.rs
lib/src/test/: utils.rs
src/: error.rs  json_rpc.rs  lib.rs  types.rs
src/client/: baked.rs  builder.rs  io.rs  mod.rs  sse.rs  types.rs
src/server/: matrix.rs  mod.rs  stdio.rs  types.rs
