[package]
name = "omcp"
version = "0.1.6"
edition = "2024"
license = "MIT"
description = "Utility functions"
repository = "https://github.com/uintptr/omcp"
homepage = "https://github.com/uintptr/omcp"


[dependencies]
async-trait = "0.1.89"
clap = { version = "4.5.47", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["from"] }
futures-util = "0.3.31"
log = "0.4.27"
reqwest = { version = "0.12.23", features = ["stream"] }
rstaples = "0.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = [
    "macros",
    "tokio-macros",
    "test-util",
    "rt-multi-thread",
] }

[dev-dependencies]
clap = { version = "4.5.47", features = ["derive"] }
uname = "0.1.1"


[[example]]
name = "omcpcli"
