[package]
name = "omcp"
version = "0.1.11"
edition = "2024"
license = "MIT"
description = "Utility functions"
repository = "https://github.com/uintptr/omcp"
homepage = "https://github.com/uintptr/omcp"


[dependencies]
async-trait = "0.1"
bytes = "1.10"
clap = { version = "4.5", features = ["derive"] }
derive_more = { version = "2.0", features = ["from"] }
futures-util = "0.3"
log = "0.4"
reqwest = { version = "0.12", features = ["stream"] }
rstaples = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.47", features = [
    "macros",
    "tokio-macros",
    "test-util"
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.47", features = [
    "macros",
    "tokio-macros",
    "test-util",
    "rt-multi-thread",
    "process",
    "io-util",
    "io-std",
    "net"
] }


[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
uname = "0.1"


[[examples]]
name = "omcpcli"
path = "examples/omcpcli.rs"

[[examples]]
name = "omcp_std_server"
path = "examples/omcp_std_server.rs"

#name = "std_server"
